Collected Apple training data

--- a/notebooks/technical_prediction/technical_prediction_data.ipynb
+++ b/notebooks/technical_prediction/technical_prediction_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "biblical-citizenship",
+   "id": "employed-volume",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,20 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "aggregate-gather",
+   "execution_count": 64,
+   "id": "behavioral-purchase",
    "metadata": {},
    "outputs": [],
    "source": [
     "finnhub_client = finnhub.Client(api_key=config.api_keys['finnhub']['sandbox'])\n",
-    "ticker = 'AMC'\n",
+    "ticker = 'AAPL'\n",
     "jar = StonkJar(ticker)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "alternative-appearance",
+   "id": "pharmaceutical-fraction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "specific-retreat",
+   "id": "acknowledged-arrangement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "successful-subsection",
+   "id": "relative-hurricane",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ordered-morrison",
+   "id": "retained-least",
    "metadata": {},
    "source": [
     "Build a base data frame from the stock's low, open, close, high and volume for the given time period"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "governmental-drove",
+   "id": "necessary-antarctica",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "imposed-twins",
+   "id": "western-navigator",
    "metadata": {},
    "source": [
     "Construct a set of data frames that each hold:\n",
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "perfect-needle",
+   "id": "sensitive-digit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fitting-basis",
+   "id": "remarkable-claim",
    "metadata": {},
    "source": [
     "Go through the calendar and fetch all the historical data on this ticker that we have access to.\n",
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "curious-contrary",
+   "id": "asian-constant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,8 +202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "similar-coalition",
+   "execution_count": 65,
+   "id": "democratic-carbon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "motivated-zoning",
+   "id": "discrete-booking",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "overall-cemetery",
+   "id": "hairy-listing",
    "metadata": {},
    "source": [
     "Now that we have raw hr resolution tick data, split it up into data 'complete' frames for training/validating. Each frame will have 10 ticks of data, 9 training ticks and the last verification ticks. This set of data will be randomized, split into a training set and a validation set, and then used to train the network."
@@ -427,8 +427,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "first-documentation",
+   "execution_count": 66,
+   "id": "cardiovascular-findings",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,22 +441,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "regular-appreciation",
+   "execution_count": 67,
+   "id": "smart-perception",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'StonkJar' object has no attribute 'to_pickle_file'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-62-a2801c671958>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_pickle_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0}-all-data-{1}.pkl\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mticker\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoday\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%Y-%m-%d'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'StonkJar' object has no attribute 'to_pickle_file'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "jar.write_pickle_file(\"{0}-all-data-{1}.pkl\".format(ticker, date.today().strftime('%Y-%m-%d')), real_frames)"
    ]
@@ -464,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nominated-assault",
+   "id": "amino-costume",
    "metadata": {},
    "outputs": [],
    "source": []
