--- a/notebooks/technical_prediction/technical_prediction_exploration.ipynb
+++ b/notebooks/technical_prediction/technical_prediction_exploration.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "domestic-wilderness",
+   "id": "discrete-cannon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "japanese-estate",
+   "id": "hindu-constitution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eight-arlington",
+   "id": "sufficient-framework",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cooperative-development",
+   "id": "monthly-removal",
    "metadata": {},
    "outputs": [
     {
@@ -244,8 +244,225 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "neural-identity",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data = jar.read_pickle_file(\"{0}-all-data-{1}.pkl\".format(ticker, '2021-02-25'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "integral-tunnel",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.00000</td>\n",
+       "      <td>1.000000e+01</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>1.000000e+01</td>\n",
+       "      <td>1.000000e+01</td>\n",
+       "      <td>1.000000e+01</td>\n",
+       "      <td>1.000000e+01</td>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>124.084132</td>\n",
+       "      <td>124.457505</td>\n",
+       "      <td>124.553766</td>\n",
+       "      <td>124.955335</td>\n",
+       "      <td>45.50000</td>\n",
+       "      <td>1.680000e+00</td>\n",
+       "      <td>1.555857</td>\n",
+       "      <td>2.397260e-02</td>\n",
+       "      <td>2.397260e-02</td>\n",
+       "      <td>2.226027e-01</td>\n",
+       "      <td>4.520548e-01</td>\n",
+       "      <td>0.277397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.712364</td>\n",
+       "      <td>0.714508</td>\n",
+       "      <td>0.588112</td>\n",
+       "      <td>0.717366</td>\n",
+       "      <td>26.70102</td>\n",
+       "      <td>2.340556e-16</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.657118e-18</td>\n",
+       "      <td>3.657118e-18</td>\n",
+       "      <td>2.925695e-17</td>\n",
+       "      <td>5.851389e-17</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>122.631000</td>\n",
+       "      <td>123.000000</td>\n",
+       "      <td>123.282900</td>\n",
+       "      <td>123.492000</td>\n",
+       "      <td>5.00000</td>\n",
+       "      <td>1.680000e+00</td>\n",
+       "      <td>1.555857</td>\n",
+       "      <td>2.397260e-02</td>\n",
+       "      <td>2.397260e-02</td>\n",
+       "      <td>2.226027e-01</td>\n",
+       "      <td>4.520548e-01</td>\n",
+       "      <td>0.277397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>123.814220</td>\n",
+       "      <td>124.186780</td>\n",
+       "      <td>124.416452</td>\n",
+       "      <td>124.683527</td>\n",
+       "      <td>24.75000</td>\n",
+       "      <td>1.680000e+00</td>\n",
+       "      <td>1.555857</td>\n",
+       "      <td>2.397260e-02</td>\n",
+       "      <td>2.397260e-02</td>\n",
+       "      <td>2.226027e-01</td>\n",
+       "      <td>4.520548e-01</td>\n",
+       "      <td>0.277397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>124.324184</td>\n",
+       "      <td>124.698279</td>\n",
+       "      <td>124.747937</td>\n",
+       "      <td>125.197072</td>\n",
+       "      <td>50.50000</td>\n",
+       "      <td>1.680000e+00</td>\n",
+       "      <td>1.555857</td>\n",
+       "      <td>2.397260e-02</td>\n",
+       "      <td>2.397260e-02</td>\n",
+       "      <td>2.226027e-01</td>\n",
+       "      <td>4.520548e-01</td>\n",
+       "      <td>0.277397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>124.556404</td>\n",
+       "      <td>124.931197</td>\n",
+       "      <td>124.974516</td>\n",
+       "      <td>125.430922</td>\n",
+       "      <td>60.50000</td>\n",
+       "      <td>1.680000e+00</td>\n",
+       "      <td>1.555857</td>\n",
+       "      <td>2.397260e-02</td>\n",
+       "      <td>2.397260e-02</td>\n",
+       "      <td>2.226027e-01</td>\n",
+       "      <td>4.520548e-01</td>\n",
+       "      <td>0.277397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>124.913983</td>\n",
+       "      <td>125.289853</td>\n",
+       "      <td>125.101918</td>\n",
+       "      <td>125.791012</td>\n",
+       "      <td>89.00000</td>\n",
+       "      <td>1.680000e+00</td>\n",
+       "      <td>1.555857</td>\n",
+       "      <td>2.397260e-02</td>\n",
+       "      <td>2.397260e-02</td>\n",
+       "      <td>2.226027e-01</td>\n",
+       "      <td>4.520548e-01</td>\n",
+       "      <td>0.277397</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               0           1           2           3         4             5   \\\n",
+       "count   10.000000   10.000000   10.000000   10.000000  10.00000  1.000000e+01   \n",
+       "mean   124.084132  124.457505  124.553766  124.955335  45.50000  1.680000e+00   \n",
+       "std      0.712364    0.714508    0.588112    0.717366  26.70102  2.340556e-16   \n",
+       "min    122.631000  123.000000  123.282900  123.492000   5.00000  1.680000e+00   \n",
+       "25%    123.814220  124.186780  124.416452  124.683527  24.75000  1.680000e+00   \n",
+       "50%    124.324184  124.698279  124.747937  125.197072  50.50000  1.680000e+00   \n",
+       "75%    124.556404  124.931197  124.974516  125.430922  60.50000  1.680000e+00   \n",
+       "max    124.913983  125.289853  125.101918  125.791012  89.00000  1.680000e+00   \n",
+       "\n",
+       "              6             7             8             9             10  \\\n",
+       "count  10.000000  1.000000e+01  1.000000e+01  1.000000e+01  1.000000e+01   \n",
+       "mean    1.555857  2.397260e-02  2.397260e-02  2.226027e-01  4.520548e-01   \n",
+       "std     0.000000  3.657118e-18  3.657118e-18  2.925695e-17  5.851389e-17   \n",
+       "min     1.555857  2.397260e-02  2.397260e-02  2.226027e-01  4.520548e-01   \n",
+       "25%     1.555857  2.397260e-02  2.397260e-02  2.226027e-01  4.520548e-01   \n",
+       "50%     1.555857  2.397260e-02  2.397260e-02  2.226027e-01  4.520548e-01   \n",
+       "75%     1.555857  2.397260e-02  2.397260e-02  2.226027e-01  4.520548e-01   \n",
+       "max     1.555857  2.397260e-02  2.397260e-02  2.226027e-01  4.520548e-01   \n",
+       "\n",
+       "              11  \n",
+       "count  10.000000  \n",
+       "mean    0.277397  \n",
+       "std     0.000000  \n",
+       "min     0.277397  \n",
+       "25%     0.277397  \n",
+       "50%     0.277397  \n",
+       "75%     0.277397  \n",
+       "max     0.277397  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data[0].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "alike-separate",
+   "id": "higher-holocaust",
    "metadata": {},
    "outputs": [],
    "source": []
