Fixes stochastic, ema and macd indicators

--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "appointed-sleep",
+   "id": "described-closing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "freelance-welding",
+   "id": "powerful-instruction",
    "metadata": {},
    "source": [
     "Settings for the data pulling shit"
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "declared-magazine",
+   "id": "blank-confirmation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,47 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "conscious-angel",
+   "execution_count": 3,
+   "id": "harmful-factory",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[get_daily_closings] fetching pre market candles\n",
-      "[get_candle_as_dataframe] fetching 60 data for 2021-03-05 04:00:01 - 2021-03-05 08:30:01\n",
-      "[get_candle_as_dataframe] data from pickle: {'c': [132, 131.8, 128.22, 135], 'h': [132.67, 133, 131.8, 141], 'l': [130.58, 131, 128.22, 126.77], 'o': [130.58, 131.5, 131.8, 128.49], 's': 'ok', 't': [1614942000, 1614945600, 1614949200, 1614952800], 'v': [6831, 40738, 129830, 3919268]}\n",
-      "[get_daily_closings] pre_candles: [[Timestamp('2021-03-05 14:00:00'), 126.77, 128.49, 135.0, 141.0, 3919268]]\n",
-      "[get_daily_closings] fetching post market candles\n",
-      "[get_candle_as_dataframe] fetching 60 data for 2021-03-05 16:00:01 - 2021-03-05 20:00:01\n",
-      "[get_candle_as_dataframe] data from pickle: {'c': [138.28, 138.28], 'h': [138.74, 138.5], 'l': [138.28, 138.28], 'o': [138.5, 138.28], 's': 'ok', 't': [1614985200, 1614988800], 'v': [27654, 42124]}\n",
-      "[get_daily_closings] post_candles: [[Timestamp('2021-03-06 00:00:00'), 138.28, 138.28, 138.28, 138.5, 42124]]\n",
-      "[get_daily_closings] fetching market end candles\n",
-      "[get_candle_as_dataframe] fetching 60 data for 2021-03-05 08:30:01 - 2021-03-05 16:00:01\n",
-      "[get_candle_as_dataframe] data from pickle: {'c': [144.25, 141.25, 136.8, 141.49, 140.08, 137, 137.42, 138.39], 'h': [151.53, 148.15, 143.5, 143.92, 141.54, 141.95, 139.84, 138.5], 'l': [133.43, 138.28, 132.75, 134.8, 139, 134.5, 135.82, 137.25], 'o': [134.6, 144.28, 141.05, 136.76, 141.54, 140.04, 137.26, 137.5], 's': 'ok', 't': [1614956400, 1614960000, 1614963600, 1614967200, 1614970800, 1614974400, 1614978000, 1614981600], 'v': [9683909, 5126650, 3437306, 2664958, 363832, 2370655, 262625, 73104]}\n",
-      "[get_daily_closings] candles: [[Timestamp('2021-03-05 22:00:00'), 137.25, 137.5, 138.39, 138.5, 73104]]\n",
-      "[get_daily_closings] retVal: [[Timestamp('2021-03-05 14:00:00'), 126.77, 128.49, 135.0, 141.0, 3919268], [Timestamp('2021-03-05 22:00:00'), 137.25, 137.5, 138.39, 138.5, 73104], [Timestamp('2021-03-06 00:00:00'), 138.28, 138.28, 138.28, 138.5, 42124]]\n",
-      "                o           l           h           c             v\n",
-      "count    3.000000    3.000000    3.000000    3.000000  3.000000e+00\n",
-      "mean   134.100000  134.756667  137.223333  139.333333  1.344832e+06\n",
-      "std      6.368822    5.441088    1.926249    1.443376  2.229581e+06\n",
-      "min    126.770000  128.490000  135.000000  138.500000  4.212400e+04\n",
-      "25%    132.010000  132.995000  136.640000  138.500000  5.761400e+04\n",
-      "50%    137.250000  137.500000  138.280000  138.500000  7.310400e+04\n",
-      "75%    137.765000  137.890000  138.335000  139.750000  1.996186e+06\n",
-      "max    138.280000  138.280000  138.390000  141.000000  3.919268e+06\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "daily = fh.get_daily_closings(ticker, datetime.today() + timedelta(days = -1), include_ah = True)"
+    "daily = fh.get_daily_closings(ticker, datetime.today(), include_ah = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "obvious-knitting",
+   "execution_count": 4,
+   "id": "numeric-hazard",
    "metadata": {},
    "outputs": [
     {
@@ -111,54 +82,20 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>t</th>\n",
-       "      <th>o</th>\n",
-       "      <th>l</th>\n",
-       "      <th>h</th>\n",
-       "      <th>c</th>\n",
-       "      <th>v</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-03-05 14:00:00</td>\n",
-       "      <td>126.77</td>\n",
-       "      <td>128.49</td>\n",
-       "      <td>135.00</td>\n",
-       "      <td>141.0</td>\n",
-       "      <td>3919268</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2021-03-05 22:00:00</td>\n",
-       "      <td>137.25</td>\n",
-       "      <td>137.50</td>\n",
-       "      <td>138.39</td>\n",
-       "      <td>138.5</td>\n",
-       "      <td>73104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2021-03-06 00:00:00</td>\n",
-       "      <td>138.28</td>\n",
-       "      <td>138.28</td>\n",
-       "      <td>138.28</td>\n",
-       "      <td>138.5</td>\n",
-       "      <td>42124</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    t       o       l       h      c        v\n",
-       "0 2021-03-05 14:00:00  126.77  128.49  135.00  141.0  3919268\n",
-       "1 2021-03-05 22:00:00  137.25  137.50  138.39  138.5    73104\n",
-       "2 2021-03-06 00:00:00  138.28  138.28  138.28  138.5    42124"
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,16 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "ruled-service",
+   "execution_count": null,
+   "id": "british-matter",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "perfect-staff",
+   "execution_count": 5,
+   "id": "reserved-education",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,8 +124,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "separate-choice",
+   "execution_count": 6,
+   "id": "urban-december",
    "metadata": {},
    "outputs": [
     {
@@ -222,67 +159,67 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>14.000000</td>\n",
-       "      <td>14.000000</td>\n",
-       "      <td>14.000000</td>\n",
-       "      <td>14.000000</td>\n",
-       "      <td>1.400000e+01</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>1.000000e+01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>134.211429</td>\n",
-       "      <td>136.584286</td>\n",
-       "      <td>137.161429</td>\n",
-       "      <td>140.331429</td>\n",
-       "      <td>2.010677e+06</td>\n",
+       "      <td>164.489010</td>\n",
+       "      <td>170.831690</td>\n",
+       "      <td>174.974990</td>\n",
+       "      <td>184.604990</td>\n",
+       "      <td>5.647709e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>3.945390</td>\n",
-       "      <td>4.622560</td>\n",
-       "      <td>4.282885</td>\n",
-       "      <td>5.606989</td>\n",
-       "      <td>2.822800e+06</td>\n",
+       "      <td>15.713125</td>\n",
+       "      <td>18.168192</td>\n",
+       "      <td>17.245864</td>\n",
+       "      <td>20.601777</td>\n",
+       "      <td>4.303462e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>126.770000</td>\n",
-       "      <td>128.490000</td>\n",
-       "      <td>128.220000</td>\n",
-       "      <td>131.800000</td>\n",
-       "      <td>6.831000e+03</td>\n",
+       "      <td>145.500000</td>\n",
+       "      <td>147.000000</td>\n",
+       "      <td>154.000000</td>\n",
+       "      <td>156.570000</td>\n",
+       "      <td>7.232860e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>131.437500</td>\n",
-       "      <td>132.500000</td>\n",
-       "      <td>135.450000</td>\n",
-       "      <td>138.500000</td>\n",
-       "      <td>4.986900e+04</td>\n",
+       "      <td>149.742500</td>\n",
+       "      <td>155.132500</td>\n",
+       "      <td>158.035000</td>\n",
+       "      <td>165.875000</td>\n",
+       "      <td>1.904228e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>134.650000</td>\n",
-       "      <td>137.380000</td>\n",
-       "      <td>137.850000</td>\n",
-       "      <td>140.420000</td>\n",
-       "      <td>3.132285e+05</td>\n",
+       "      <td>166.275000</td>\n",
+       "      <td>169.595000</td>\n",
+       "      <td>174.155000</td>\n",
+       "      <td>192.840000</td>\n",
+       "      <td>5.603866e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>138.022500</td>\n",
-       "      <td>139.655000</td>\n",
-       "      <td>139.657500</td>\n",
-       "      <td>143.112500</td>\n",
-       "      <td>3.244219e+06</td>\n",
+       "      <td>176.525075</td>\n",
+       "      <td>185.602675</td>\n",
+       "      <td>191.699975</td>\n",
+       "      <td>200.127500</td>\n",
+       "      <td>6.917853e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>139.000000</td>\n",
-       "      <td>144.280000</td>\n",
-       "      <td>144.250000</td>\n",
-       "      <td>151.530000</td>\n",
-       "      <td>9.683909e+06</td>\n",
+       "      <td>188.100000</td>\n",
+       "      <td>197.920000</td>\n",
+       "      <td>198.000000</td>\n",
+       "      <td>210.869900</td>\n",
+       "      <td>1.320740e+07</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -290,17 +227,17 @@
       ],
       "text/plain": [
        "                o           l           h           c             v\n",
-       "count   14.000000   14.000000   14.000000   14.000000  1.400000e+01\n",
-       "mean   134.211429  136.584286  137.161429  140.331429  2.010677e+06\n",
-       "std      3.945390    4.622560    4.282885    5.606989  2.822800e+06\n",
-       "min    126.770000  128.490000  128.220000  131.800000  6.831000e+03\n",
-       "25%    131.437500  132.500000  135.450000  138.500000  4.986900e+04\n",
-       "50%    134.650000  137.380000  137.850000  140.420000  3.132285e+05\n",
-       "75%    138.022500  139.655000  139.657500  143.112500  3.244219e+06\n",
-       "max    139.000000  144.280000  144.250000  151.530000  9.683909e+06"
+       "count   10.000000   10.000000   10.000000   10.000000  1.000000e+01\n",
+       "mean   164.489010  170.831690  174.974990  184.604990  5.647709e+06\n",
+       "std     15.713125   18.168192   17.245864   20.601777  4.303462e+06\n",
+       "min    145.500000  147.000000  154.000000  156.570000  7.232860e+05\n",
+       "25%    149.742500  155.132500  158.035000  165.875000  1.904228e+06\n",
+       "50%    166.275000  169.595000  174.155000  192.840000  5.603866e+06\n",
+       "75%    176.525075  185.602675  191.699975  200.127500  6.917853e+06\n",
+       "max    188.100000  197.920000  198.000000  210.869900  1.320740e+07"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,26 +248,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "arranged-recall",
+   "execution_count": null,
+   "id": "spare-liechtenstein",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "italian-evans",
+   "execution_count": 8,
+   "id": "behavioral-party",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    t      o      l      h      c        v\n",
+      "0 2020-12-08 12:00:00  16.39  16.39  16.45  16.49     4744\n",
+      "1 2020-12-08 13:00:00  16.38  16.48  16.53  16.55    27463\n",
+      "2 2020-12-08 14:00:00  15.93  16.38  16.08  16.60  1073499\n",
+      "3 2020-12-08 15:00:00  16.00  16.08  16.38  16.61  1014875\n",
+      "4 2020-12-08 16:00:00  16.14  16.38  16.22  16.38   697549\n"
+     ]
+    }
+   ],
    "source": [
     "data = fh.get_historical_data(ticker, fh.stock_candles_by_date, include_ah = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "boxed-maker",
+   "execution_count": 9,
+   "id": "defensive-envelope",
    "metadata": {},
    "outputs": [
     {
@@ -364,27 +314,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>789.000000</td>\n",
-       "      <td>789.000000</td>\n",
-       "      <td>789.000000</td>\n",
-       "      <td>789.000000</td>\n",
-       "      <td>7.890000e+02</td>\n",
+       "      <td>777.000000</td>\n",
+       "      <td>777.000000</td>\n",
+       "      <td>777.000000</td>\n",
+       "      <td>777.000000</td>\n",
+       "      <td>7.770000e+02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>62.128219</td>\n",
-       "      <td>66.830231</td>\n",
-       "      <td>66.392210</td>\n",
-       "      <td>71.090867</td>\n",
-       "      <td>3.035372e+06</td>\n",
+       "      <td>62.834022</td>\n",
+       "      <td>67.606541</td>\n",
+       "      <td>67.161730</td>\n",
+       "      <td>71.934329</td>\n",
+       "      <td>3.075990e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>67.371356</td>\n",
-       "      <td>77.220887</td>\n",
-       "      <td>75.503506</td>\n",
-       "      <td>84.485761</td>\n",
-       "      <td>5.980315e+06</td>\n",
+       "      <td>67.648297</td>\n",
+       "      <td>77.561187</td>\n",
+       "      <td>75.828281</td>\n",
+       "      <td>84.867626</td>\n",
+       "      <td>6.017436e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -396,27 +346,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>18.530000</td>\n",
-       "      <td>18.830000</td>\n",
-       "      <td>18.820000</td>\n",
-       "      <td>18.980000</td>\n",
-       "      <td>1.174570e+05</td>\n",
+       "      <td>18.780000</td>\n",
+       "      <td>19.020000</td>\n",
+       "      <td>19.040000</td>\n",
+       "      <td>19.260000</td>\n",
+       "      <td>1.204210e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>40.650000</td>\n",
        "      <td>42.290000</td>\n",
-       "      <td>42.270000</td>\n",
-       "      <td>43.350000</td>\n",
-       "      <td>9.003950e+05</td>\n",
+       "      <td>42.810000</td>\n",
+       "      <td>42.880000</td>\n",
+       "      <td>43.900000</td>\n",
+       "      <td>9.109350e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>81.110000</td>\n",
-       "      <td>88.820000</td>\n",
-       "      <td>87.685000</td>\n",
-       "      <td>92.000000</td>\n",
-       "      <td>2.949799e+06</td>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>89.250000</td>\n",
+       "      <td>88.870000</td>\n",
+       "      <td>93.870000</td>\n",
+       "      <td>3.050425e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -432,17 +382,17 @@
       ],
       "text/plain": [
        "                o           l           h           c             v\n",
-       "count  789.000000  789.000000  789.000000  789.000000  7.890000e+02\n",
-       "mean    62.128219   66.830231   66.392210   71.090867  3.035372e+06\n",
-       "std     67.371356   77.220887   75.503506   84.485761  5.980315e+06\n",
+       "count  777.000000  777.000000  777.000000  777.000000  7.770000e+02\n",
+       "mean    62.834022   67.606541   67.161730   71.934329  3.075990e+06\n",
+       "std     67.648297   77.561187   75.828281   84.867626  6.017436e+06\n",
        "min     12.145000   12.300000   12.300000   12.740000  0.000000e+00\n",
-       "25%     18.530000   18.830000   18.820000   18.980000  1.174570e+05\n",
-       "50%     40.650000   42.290000   42.270000   43.350000  9.003950e+05\n",
-       "75%     81.110000   88.820000   87.685000   92.000000  2.949799e+06\n",
+       "25%     18.780000   19.020000   19.040000   19.260000  1.204210e+05\n",
+       "50%     42.290000   42.810000   42.880000   43.900000  9.109350e+05\n",
+       "75%     85.000000   89.250000   88.870000   93.870000  3.050425e+06\n",
        "max    421.700000  469.000000  468.500000  513.120000  5.785278e+07"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "surgical-spirituality",
+   "id": "sought-australian",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -462,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "median-connecticut",
+   "id": "subject-cigarette",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "pointed-universe",
+   "id": "loose-compromise",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "starting-audit",
+   "id": "starting-bronze",
    "metadata": {},
    "outputs": [],
    "source": []
