--- a/notebooks/fundamentals.ipynb
+++ b/notebooks/fundamentals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "periodic-infrared",
+   "id": "comprehensive-lemon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,30 +15,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "solid-organizer",
+   "execution_count": 15,
+   "id": "bibliographic-perth",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ticker = 'AMD'"
+    "ticker = 'VERU'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "persistent-nirvana",
+   "execution_count": 16,
+   "id": "metallic-multimedia",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetching data for AMD...\n",
+      "Fetching data for VERU...\n",
       "\n",
-      "Latest FCF: 777.0\n",
-      "Market price: 81.23\n",
-      "EPS: 2.06\n",
-      "Growth estimate: 26.06\n",
+      "Latest FCF: -2.04\n",
+      "Market price: 14.68\n",
+      "EPS: -0.28\n",
+      "Growth estimate: 127.6\n",
       "Term: 5 years\n",
       "Discount Rate: 10%\n",
       "Perpetual Rate: 3%\n",
@@ -47,14 +47,14 @@
       "DCF model\n",
       "================================================================================\n",
       "\n",
-      "Fair value: 24.46737663889291\n",
+      "Fair value: -11.456218418253606\n",
       "\n",
       "================================================================================\n",
       "Graham style valuation basic (Page 295, The Intelligent Investor)\n",
       "================================================================================\n",
       "\n",
-      "Expected value based on growth rate: 124.8772\n",
-      "Growth rate priced in for next 7-10 years: 15.466019417475728\n",
+      "Expected value based on growth rate: -73.836\n",
+      "Growth rate priced in for next 7-10 years: -30.46428571428571\n",
       "\n"
      ]
     }
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stainless-sunday",
+   "id": "immune-blowing",
    "metadata": {},
    "outputs": [],
    "source": []
