--- a/notebooks/stonks/cpng.ipynb
+++ b/notebooks/stonks/cpng.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "hollywood-abraham",
+   "id": "swedish-cambodia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,10 +21,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "judicial-version",
+   "execution_count": 1,
+   "id": "polished-stamp",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'finnhub' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-b6bdddf3790e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mticker\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'CPNG'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfinnhub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_historical_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mticker\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_daily_closings\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdays\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m180\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'finnhub' is not defined"
+     ]
+    }
+   ],
    "source": [
     "ticker = 'CPNG'\n",
     "\n",
@@ -39,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mature-accident",
+   "id": "comparative-affect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "naval-community",
+   "id": "parallel-lighter",
    "metadata": {},
    "outputs": [],
    "source": [
